Lower page min-width to 320px, prevent too big images, and allow rescaling.

--- a/pychronia_common/static/MetalRadiance/scss/_layout_desktop.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_layout_desktop.scss
@@ -248,7 +248,6 @@ body .notification_panel {
                  top: 0; bottom: 0; */
                 // aligns Vertically
                 max-height: 100%;
-                max-width: 100%;
             }
         }
 
