--- a/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
@@ -142,6 +142,10 @@ p {
     }
 }
 
+img {
+    max-width: 100%;
+}
+
 a img {
     border-width: 0;
 }
@@ -305,7 +309,6 @@ button.pretty_button {
 
 .section img, // typical of restructuredtext images
 img.content {
-    max-width: 100%;
     margin-top: 15px;
     margin-bottom: 15px;
     @include mobile-only {
